# ai-school-rag

./: .gitignore  2.20.0  README.md  pyproject.toml
chroma_db_identity/894699bc-ca85-4063-98a4-c43bdd2c5060/: index_metadata.pickle
chroma_db_identity/c1eb9669-2817-4027-a7af-2db2cb1ec13b/: index_metadata.pickle
chroma_db_semantic/: chroma.sqlite3
chroma_db_sliding_window/62730ad2-6fca-4206-a15c-f9d8515dc20a/: index_metadata.pickle
src/: RAG.py  app.py  config.py  main.py  test.py
src/chunkers/: __init__.py  base.py  factory.py  identity.py  llm.py  semantic.py  sliding_window.py  time_window.py
src/embedder/: __init__.py  base_embedder.py  embedder.py  nomic_embedder.py  openai_embedder.py
src/eval/: __init__.py  eval_dataset.py  evaluator.py
src/ingestion/: __init__.py  pdf_loader.py  pipeline.py
src/loaders/: __init__.py  clip_embedder.py  csv_loader.py  image_extractor.py  text_extractor.py
src/model/: __init__.py  chunk.py  models.py  search_result.py  tweet.py
src/ui/: __init__.py  cache.py  constants.py  dashboard_tab.py  eval_tab.py  filters.py  rag_tab.py
src/vectorstore/: __init__.py  chromadb_store.py
