[project]
name = "ai-school-rag"
version = "0.1.0"
description = "RAG pipeline project"
authors = [
    {name = "Stanislav Zhurich",email = "stanislav.zhurich@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.14.1 || >3.14.1,<3.15"
dependencies = [
    "openai (>=2.30.0,<3.0.0)",
    "chromadb (>=1.5.5,<2.0.0)",
    "kagglehub (>=1.0.0,<2.0.0)",
    "pdfplumber (>=0.11.0,<1.0.0)",
    "pypdf (>=5.0.0,<6.0.0)",
    "pytesseract (>=0.3.13,<1.0.0)",
    "pillow (>=11.0.0,<12.0.0)"
]


[tool.poetry]
packages = [{include = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
